Added Zoho Integration

--- a/packages/rocketchat-i18n/i18n/en.i18n.json
+++ b/packages/rocketchat-i18n/i18n/en.i18n.json
@@ -257,7 +257,7 @@
   "Allow_Invalid_SelfSigned_Certs_Description": "Allow invalid and self-signed SSL certificate's for link validation and previews.",
   "Allow_switching_departments": "Allow Visitor to Switch Departments",
   "Allow_Marketing_Emails": "Allow Marketing Emails",
-  "Allow_Online_Agents_Outside_Office_Hours" : "Allow online agents outside of office hours",
+  "Allow_Online_Agents_Outside_Office_Hours": "Allow online agents outside of office hours",
   "Almost_done": "Almost done",
   "Alphabetical": "Alphabetical",
   "Always_open_in_new_window": "Always Open in New Window",
@@ -989,7 +989,7 @@
   "Custom_Translations_Description": "Should be a valid JSON where keys are languages containing a dictionary of key and translations. Example:<br/><code>{\n \"en\": {\n  \"Channels\": \"Rooms\"\n },\n \"pt\": {\n  \"Channels\": \"Salas\"\n }\n}</code> ",
   "Custom_User_Status": "Custom User Status",
   "Custom_User_Status_Add": "Add Custom User Status",
-  "Custom_User_Status_Added_Successfully" : "Custom User Status Added Successfully",
+  "Custom_User_Status_Added_Successfully": "Custom User Status Added Successfully",
   "Custom_User_Status_Delete_Warning": "Deleting a Custom User Status cannot be undone.",
   "Custom_User_Status_Error_Invalid_User_Status": "Invalid User Status",
   "Custom_User_Status_Error_Name_Already_In_Use": "The Custom User Status Name is already in use.",
@@ -1883,6 +1883,11 @@
   "Livechat_Facebook_API_Key": "OmniChannel API Key",
   "Livechat_Facebook_API_Secret": "OmniChannel API Secret",
   "Livechat_Facebook_Enabled": "Facebook integration enabled",
+  "Livechat_Ticket_ZohoDesk_Enabled": "Zoho Desk integration enabled",
+  "Livechat_Ticket_ZohoDesk_Api_Base_Url": "Zoho Desk API Base Url",
+  "Livechat_Ticket_ZohoDesk_Default_Department_Id": "Zoho Desk Default Department Id",
+  "Livechat_Ticket_ZohoDesk_Org_Id": "Organization ID",
+  "Livechat_Ticket_ZohoDesk_Auth_Token": "Authentication Token",
   "Livechat_forward_open_chats": "Forward open chats",
   "Livechat_forward_open_chats_timeout": "Timeout (in seconds) to forward chats",
   "Livechat_guest_count": "Guest Counter",
@@ -2945,6 +2950,7 @@
   "Thread_message": "Commented on *__username__'s* message: _ __msg__ _",
   "This_week": "This Week",
   "Thursday": "Thursday",
+  "Ticket_Info": "Ticket Info",
   "Time_in_seconds": "Time in seconds",
   "Timeouts": "Timeouts",
   "Title": "Title",
